# backup-collectors

./: .env.example  README.md  cli.py  cli_helper.py  context.py  models.py  pyproject.toml  requirements.txt  result.py  runtime.py  settings.py
backup_collector/: exceptions.py
backup_collector/outputs/: backup_hub.py  json_file.py  reference.py  stdout.py
collectors/: __init__.py  datadomain.py  netbackup.py  tapelibrary.py
collectors/baseline/: __init__.py  collector.py  output.py  parser.py
collectors/logstash/: __init__.py  collector.py  output.py  parser.py
collectors/pamela/: __init__.py  collector.py  output.py  parser.py
modules/: README.md  __init__.py  datadomain.py  icinga.py  netbackup.py  output.py  tapelibrary.py
modules/backup_hub/: __init__.py  output.py
modules/datadomain/: __init__.py
modules/elk/: __init__.py  images.py  jobs.py  output.py  scope.py  shares.py
modules/icinga/: __init__.py  (+1 more)
outputs/: __init__.py  backup_hub.py  http.py  json_file.py  logstash.py  reference.py  stdout.py
parsers/: __init__.py  baseline.py  logstash.py  pamela.py  service.py
runtime/: executor.py  registry.py
scopes/: pamela.py
services/: __init__.py  datadomain.py  file_output.py  http_output.py  icinga.py  logstash_output.py  netbackup.py  output.py  record_filters.py  referential.py  ssh.py  tapelibrary.py
tests/: test_cli.py  test_executor.py  test_icinga_handler.py  test_netbackup_collector.py  test_netbackup_source.py  test_output_service.py  test_outputs.py  test_parsers.py  test_referential_service.py  test_runtime.py  test_scopes.py
(+80 files in other folders)
