[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backup-collector"
version = "0.1.0"
description = "Simple backup asset collection pipelines for Icinga"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "netbackup-py>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
backup-collector = "cli:main"

[tool.setuptools]
py-modules = ["cli", "context", "exceptions", "result", "settings"]

[tool.setuptools.packages.find]
where = ["."]
include = ["external*", "outputs*", "runtime*", "scopes*", "sources*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
